opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ppx_sexp_conv"
bug-reports: "https://github.com/janestreet/ppx_sexp_conv/issues"
dev-repo: "https://github.com/janestreet/ppx_sexp_conv.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "ppx_sexp_conv" "--root" "." "-j" jobs "@install"]
]
depends: [
  "jbuilder"                {build}
  "ppx_core"
  "ppx_driver"
  "ppx_metaquot"
  "ppx_type_conv"
  "sexplib"
  "ocaml-migrate-parsetree"
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Generation of S-expression conversion functions from type definitions

Part of the Jane Street's PPX rewriters collection.
"
